deploy/standalone/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goauthy
  namespace: goauthy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: standalone
    spec:
      containers:
        - name: goauthy
          ports:
            - $patch: replace
            - name: http
              containerPort: 8080
