deploy/standalone/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: goauthy
  namespace: goauthy
spec:
  ports:
    - $patch: replace
    - name: http
      port: 8080
      targetPort: http
