deploy/standalone/delete-resources.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: goauthy-ingress
  namespace: goauthy
